--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Chat App</title>
+    <link rel="icon" href="/img/favicon.png">
+    <link rel="stylesheet" href="/css/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat app</title>
 </head>
 <body>
-    <p>Chat app</p>
+    <div class="chat">
+        <div class="chat__sidebar">
 
-    <div id="messages"></div>
-
-    <form id="theForm" >
-        <input type="text" name="message">
-        <button type="submit" >Send</button>
-    </form>
-    <button id="sendLocation" >Send location</button>
+            
+        </div>
+        <div class="chat___main">
+            <div id="messages" class="chat__messages" ></div>
+            <div class="compose">
+                <form id="theForm" >
+                    <input type="text" name="message">
+                    <button type="submit" >Send</button>
+                </form>
+                <button id="sendLocation" >Send location</button>
+            </div>
+        </div>
+    </div>
 
     <script id="messageTemplate" type="text/html" >
-        <div>
-            <p>{{createdAt}} - {{message}}</p>
+        <div class="message" >
+            <p>
+                <span class="message__name" >Some user name</span>
+                <span class="message__meta" >{{createdAt}}</span>
+            </p>
+            <p>{{message}}</p>
         </div>
     </script>
 
     <script id="locationTemplate" type="text/html" >
-        <div>
-            <p>{{createdAt}} - <a target="_BLANK" href="{{locationUrl}}" >My current location</a></p>
+        <div class="message" >
+            <p>
+                <span class="message__name" >Some user name</span>
+                <span class="message__meta" >{{createdAt}}</span>
+            </p>
+            <p><a target="_BLANK" href="{{locationUrl}}" >My current location</a></p>
         </div>
     </script>
     
